--- a/static/screen.css
+++ b/static/screen.css
@@ -66,4 +66,18 @@ a:link, a:visited, a:active {
     text-decoration-color: grey;
 }
 
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+}
 
+blockquote p {
+  display: inline;
+}
+
+li::before{ /* This is to align the first line. */
+    content:" ";
+    padding-left:10px;
+}
